Major update including data for projects.
