# swagger.yaml
@@ -1,16 +1,11 @@
-# this is an example of the Uber API
-# as a demonstration of an API spec in YAML
 swagger: '2.0'
 info:
   title: Troels resume API
   description: Provides data for Angular resume website
-  version: "1.0.0"
-# the domain of the service
+  version: 1.0.0
 host: troelslenda.com
-# array of all schemes that your API supports
 schemes:
   - https
-# will be prefixed to all paths
 basePath: /api2
 produces:
   - application/endomondo
@@ -22,7 +17,7 @@ paths:
       tags:
         - Activity
       responses:
-        200:
+        '200':
           description: An array of products
           schema:
             type: array
@@ -39,12 +34,29 @@ paths:
       tags:
         - Project
       responses:
-        200:
+        '200':
           description: An array of projects
           schema:
             type: array
             items:
               $ref: '#/definitions/Project'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /matches:
+    get:
+      summary: IPSC Matches
+      description: IPSC matches participated in.
+      tags:
+        - Activity
+      responses:
+        '200':
+          description: An array of products
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Activity'
         default:
           description: Unexpected error
           schema:
@@ -58,7 +70,7 @@ definitions:
         description: date of the activity.
       activity:
         type: string
-        description: Type of activity, could be ie. Running, Cycling, etc.
+        description: 'Type of activity, could be ie. Running, Cycling, etc.'
       distance:
         type: string
         description: Distance in kilometers.
@@ -71,13 +83,21 @@ definitions:
       official:
         type: string
         description: Techonologies used on the project.
-        
   Project:
     type: object
     properties:
       name:
         type: string
         description: The name of the project
+      key:
+        type: string
+        description: The machinename of the project
+      url:
+        type: string
+        description: The link to the project
+      logo:
+        type: string
+        description: The logo as SVG or base64 of the project
       description:
         type: string
         description: Description of project.
@@ -97,6 +117,23 @@ definitions:
         items:
           type: string
         description: Techonologies used on the project.
+  IPSCMatch:
+    type: object
+    properties:
+      name:
+        type: string
+        description: The name of the match
+      start_date:
+        type: string
+        description: Time of match start
+      score:
+        type: array
+        items:
+          $ref: '#/definitions/Score'
+        description: Score
+      division:
+        type: string
+        description: Score
   Error:
     type: object
     properties:
@@ -107,3 +144,27 @@ definitions:
         type: string
       fields:
         type: string
+  Score:
+    type: object
+    properties:
+      percent:
+        type: number
+        description: The score in percent
+      a:
+        type: integer
+        description: The score in percent
+      c:
+        type: integer
+        description: The score in percent
+      d:
+        type: integer
+        description: The score in percent
+      mike:
+        type: integer
+        description: The score in percent
+      procedure:
+        type: integer
+        description: The score in percent
+      noshoot:
+        type: integer
+        description: The score in percent
